[tool.poetry]
name = "keylayers"
version = "0.1.0"
description = "Package for creating keyboard layers"
authors = ["Zane Dufour"]

[tool.poetry.dependencies]
python = "3.8"
click = "^7.0"

[tool.poetry.dev-dependencies]
black = {version = "^19.3b0", allows-prereleases = true}
pre-commit = "^1.18.3"
tox = "^3.14.0"
pytest = "^5.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
